# libglenda

./: CMakeLists.txt  README.md
include/glenda/: arch.h  cap.h  console.h  error.h  glenda.h  ipc.h  mem.h  method.h  protocol.h  stdarg.h  stdbool.h  stddef.h  stdint.h  stdio.h  sys.h  syscall.h  types.h  utils.h
include/glenda/arch/riscv64/: mem.h  syscall.h
include/glenda/arch/x86_64/: mem.h  syscall.h
include/glenda/cap/: cnode.h  endpoint.h  irq.h  kernel.h  tcb.h  untyped.h  vspace.h
include/glenda/client/: device.h  fs.h  generic.h  init.h  network.h  process.h  resource.h
include/glenda/utils/: platform.h
src/: cap.c  console.c  crt0.c  ipc.c  stdio.c  sys.c  utils.c
src/arch/riscv64/: crt0.S  syscall.S
src/arch/x86_64/: crt0.S
src/cap/: cap.c
src/client/: device.c  fs.c  generic.c  init.c  network.c  process.c  resource.c
src/ipc/: ipc.c
